--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../dist/output.css" />
     <script src="../js/script.js" defer></script>
-    <title>Bookmark Website</title>
+    <title>Bookmark</title>
+    <link rel="icon" type="image/x-icon" href="logo.png">
+
   </head>
 
   <body class="overflow-x-hidden">
