--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../dist/output.css" />
-    <script src="../js/script.js" defer></script>
+    <link rel="stylesheet" href="./dist/output.css" />
+    <script src="./js/script.js" defer></script>
     <title>Bookmark</title>
     <link rel="icon" type="image/x-icon" href="logo.png">
 
